--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,26 @@
-START_NEW_GAME=Starting New Game...
+#START_NEW_GAME=Starting New Game...
 START_GAME_TO_SAVE=Please Start a new game to save
 SAVE_ERROR=Sorry could not save game
 LOAD_ERROR=Sorry could not load game
 NO_SAVES=Save Game file not found
+XP_MESSAGE =%s earned %s XP Points
+
+#Menu Titles
+MAIN_MENU_OPTION=Choose Option:
+DIFFICULTY_OPTION=Choose Game Difficulty:
+CHARACTER_NAME_OPTION=Character Name:
+PLAYER_CLASS_OPTION=Choose Player Class:
+CHARACTER_MOVEMENT_OPTION=Choose character movement:
+CHARACTER_FIGHTING_OPTION=Choose character action:
+UNABLE_TO_FIND_PLAYER=It is impossible to continue game when no user character on the map
+
+#Fight messages
+DEAL_ENEMY_DAMAGE=%s %s deals damage of %s points.
+ENEMY_HEALTH_STATUS=Remaining Enemy health is %s.
+ENEMY_KILLED=Enemy has been annihilated.
+DEAL_PLAYER_DAMAGE=Enemy deals damage of %s points.
+PLAYER_HEALTH_STATUS=%s %s has %s health left.
+GAME_OVER=%s %s has died a brave death. Game Over.....
+SHIELD_UP=%s %s activates shield.
+SHIELD_ABSORBS_ALL_DAMAGE=Shield absorbs all the damage.
+WIN_MESSAGE=Congratulations!!!. You Won the level. Total XP =%s
