Test Cases and Readme file

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,7 +12,7 @@ CHARACTER_NAME_OPTION=Character Name:
 PLAYER_CLASS_OPTION=Choose Player Class:
 CHARACTER_MOVEMENT_OPTION=Choose character movement:
 CHARACTER_FIGHTING_OPTION=Choose character action:
-UNABLE_TO_FIND_PLAYER=It is impossible to continue game when no user character on the map
+UNABLE_TO_FIND_PLAYER=It is impossible to continue game when no user character on the gameMap
 
 #Fight messages
 DEAL_ENEMY_DAMAGE=%s %s deals damage of %s points.
