Attribute changes and bugfixes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,7 @@ SAVE_ERROR=Sorry could not save game
 LOAD_ERROR=Sorry could not load game
 NO_SAVES=Save Game file not found
 XP_MESSAGE =%s earned %s XP Points
+GAME_ALREADY_WON=Game Already Over. Cannot Save at this moment...
 
 #Menu Titles
 MAIN_MENU_OPTION=Choose Option:
